# pythonic-mastery

./: .gitignore  README.md  main.py  pyproject.toml
notebook/: python_core.ipynb
