[project]
name = "pythonic-mastery"
version = "1.0.0"
description = "A hands-on collection of Python patterns, performance techniques, and real-world coding scenarios to prepare for senior software engineering."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.6",
    "notebook>=7.5.5",
]
